# axon

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bolt.sh
.github/workflows/: rust-ci.yml
axon/diskann/: Cargo.toml
axon/diskann/benches/: sift10k_search_10k.rs
axon/diskann/src/: in_disk_index.rs  index_view.rs
axon/proto/: vector.proto
axon/service/: Cargo.toml
axon/service/src/: lib.rs
axon/service/tests/: test_service.rs
axon/vecd/: Cargo.toml
examples/: Cargo.toml
examples/src/: index_utils.rs  sift10k_index_grpc.rs  sift1m_index.rs
nyas/diskann/benches/: sift10k_index_10k.rs
nyas/diskann/src/: disk_index_storage.rs  in_disk_index.rs  in_mem_index.rs
nyas/proto/: vector.proto
nyas/vecd/src/: main.rs
