[package]
name = "axon-examples"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
diskann = { path = "../axon/diskann" }
system = { path = "../axon/system" }
service = { path = "../axon/service" }
tokio.workspace = true
tonic.workspace = true
cpu-time = "1.0.0"
futures.workspace = true

[[bin]]
name = "sift10k_index"
path = "src/sift10k_index.rs"

[[bin]]
name = "sift10k_index_grpc"
path = "src/sift10k_index_grpc.rs"

[[bin]]
name = "sift1m_index"
path = "src/sift1m_index.rs"
